# seedr

./: .gitignore  LICENSE  README.md
backend/: .dockerignore  .env.example  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/v1/: routes.py
backend/app/core/: config.py
backend/app/dependencies/: redis.py  sqlite.py
backend/app/schemas/: __init__.py  garden.py  seed.py  task.py
backend/apps/: __init__.py  api.py  apps.py
backend/apps/garden/: api.py  models.py  schemas.py
backend/apps/garden/migrations/: 0001_initial.py
backend/apps/seed/: models.py
backend/apps/task/: models.py
backend/redis/: redis.conf
backend/seedr/: asgi.py  settings.py  urls.py  wsgi.py
backend/seedr_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_health.py
