[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seedr-backend"
version = "0.1.0"
description = "FastAPI backend for the Seedr hydroponic scheduler"
readme = "README.md"
authors = [{name = "Seedr"}]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis[hiredis]>=5.0",
    "pydantic-settings>=2.2",
    "apscheduler>=3.10",
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["tests*"]

[tool.ruff]
line-length = 100
src = ["app", "tests"]
